--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,186 @@
+@keyframes containerTransition{
+    0%{
+        opacity:0%;
+    }
+    25%{
+        opacity:25%;
+    }
+    50%{
+        opacity:50%;
+    }
+    75%{
+        opacity:75%;
+    }
+    100%{
+        opacity:100%;
+    }
+}
+
+:root{
+    --bodyBG: #1f2225;
+    --darkest: black;
+    --brightest: white;
+    --specialBtnsContBG: #525357;
+    --whiteThatAppearsEverywhere: rgb(225, 223, 220);
+    --typeBtnContBG: grey;
+    --typeBtnsBG: rgb(103, 101, 101);
+    --specialBtnsBG: none;
+}
+
+body{
+    margin-top:0px;
+    margin-left:0px;
+    margin-bottom:40px;
+    margin-right:0px;
+    height: 100%;
+    width:100%;
+    background-color:var(--bodyBG);
+    overflow-y:hidden;
+    overflow-x: hidden;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-content: center;
+    user-select: none;
+}
+
+.settingsMenu{
+    display:none;
+    height:90vh;
+    width:50vw;
+    background:var(--darkest);
+    position:absolute;
+    border-radius:10px;
+    align-self:center;
+    justify-self:center;
+    padding: 20px;
+    top:3%;
+    z-index:1;
+    opacity:100%;
+    transition:0.2s ease-in-out;
+}
+.colorSettings{
+  display:flex;
+  flex-direction:row;
+  gap:15px;
+}
+
+#dropdownBtn{
+  width: 100%;
+  height:100%;
+  padding: 10px;
+  color: white;
+  background: var(--bodyBG);
+  border-style: none;
+  justify-items:left;
+}
+#dropdownBtn:hover{
+  filter: brightness(120%);
+}
+.specialDropdownBtn{
+  border-style: solid;
+  border: none;
+  border-radius: 5px;
+}
+
+.colorSettingsDropdown{
+  width:fit-content;
+  height:fit-content;
+  background: var(--bodyBG);
+  display:flex !important;
+  flex-direction: column;
+  width:fit-content;
+  height: fit-content;
+  border-style:solid;
+  border-radius:5px;
+  border-color:none;
+  right:0%;
+}
+.active{
+  opacity: 100%;
+  flex-direction:column;
+}
+.inactive{
+  opacity: 0%;
+}
 #titleCard{
+    margin-bottom:20px;
     display:flex;
     justify-content: center;
     font-family:'Helvetica';
-    font-size:7vh;
+    font-size:40px;
     font-weight:bold;
-    color:white;
+    color:var(--brightest);
 }
-body{
-    height: 740px;
-    background-color:#1f2225;
-    overflow-y: hidden;
-    overflow-x: hidden;
-}
-img{
-    width: 70vh;
-    height:auto;
+#musicImage{
+    width: 80vw;
+    max-width: 700px;
+    height:40vh;
     display:block;
     margin-left:auto;
     margin-right:auto;
-    margin-top:15px;
-    margin-bottom:5px;
+    margin-top:10px;
+    margin-bottom:10px;
     border-radius:10px;
+    scale:130%;
+}
+
+.specialButtonContainer{
+    position:absolute;
+    display:flex;
+    flex-direction: column;
+    flex-wrap:wrap;
+    background-color:var(--specialBtnsContBG);
+    border-radius:10px;
+    padding:7px;
+    gap:10px;
+    top:2%;
+    left:1%;
+    justify-content:center;
+    align-content:center;
+}
+
+.specialButton{
+    width:4vw;
+    max-width:35px;
+    z-index:3;
+    transition:0.4s ease-in-out;
+    filter: var(--specialBtnsBG);
+}
+
+.specialButton:hover{
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+    cursor:pointer;
+}
+
+#settings:hover{
+    transform: translateY(-5px) translateX(-2px) rotate(90deg);
+}
+#home{
+    transition: 0.2s ease-in-out;
+}
+
+#home:hover{
+    transform: translateY(-3px);
+}
+
+.imgContainer{
+    background:white;
+    border-radius:10px;
+    margin-bottom:10px;
+    margin-top:10px;
+}
+
+@media screen and (min-width: 750px){
+    #titleCard{
+        font-size: 60px;
+    }
 }
 .musicButton{
+    position: none;
     user-select: none;
-    width: 15vh;
+    width: 10vw;
+    min-width:110px;
     height: 6vh;
     border-radius:15px;
     border-style: solid;
@@ -37,65 +193,246 @@ img{
     font-size: calc(15px + 20%);
     font-family:'Helvetica';
     font-weight: bold;
-    background-color: #1f2225;
-    color: white;
-    border-color:rgb(225, 223, 220);
+    background-color: var(--bodyBG);
+    color: var(--brightest);
+    border-color:var(--whiteThatAppearsEverywhere);
     margin-bottom:10px;
 }
 
 ::-webkit-scrollbar{
     display: none;
 }
-#nextButton{
-    width: 15vh;
-    height: 6vh;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    font-family:'Helvetica';
-    font-weight:bold;
-    background-color: rgb(225, 223, 220);
-    border-color:#1f2225;
-    margin-bottom: 20px;
-    color:black;
-}
-
 .musicButton:hover{
     cursor:pointer;
     filter:invert(100%);
 }
 
 .buttonContainer{
-    height:100vh;
+    margin-top:-20px;
+    height:95vh;
     display:flex;
     flex-direction: column;
     align-items: center;
 }
+
 .container{
-    width:calc(60vh + 20px);
-    height: 35vh;
+    width:calc(60vw + 20px);
+    max-width: 700px;
+    height: auto;
+    display:none;
+    background:var(--specialBtnsContBG);
+    border-radius: 8px;
+    margin-top: 10px;
+    transition: 0.5s ease-in-out;
+    opacity:0%;
+    position:absolute;
+    left:0%;
+}
+
+.main{
+    position:relative;
+    opacity:100%;
+    animation-name:containerTransition;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+    animation-duration: 1s;
     display:flex;
-    align-self:center;
     flex-wrap: wrap;
     flex-direction: row;
     align-content: space-evenly;
     justify-content: center;
+    justify-items: center;
     gap:10px;
-    background:#525357;
+}
+
+.streakGrow{
+    scale: 120%;
+    color: green !important;
+}
+
+#scoreContainer{
+    display:flex;
+    width:80vw;
+    max-width: 700px;
+    height: auto;
+    align-items: center;
+    justify-self:center;
+    justify-content: center;
+    flex-wrap:wrap;
+    position:relative;
+}
+
+#skipButton{
+    display:flex;
+    width: 15vh;
+    height: 6vh;
+    min-width:100px;
+    min-height:30px;
+    justify-content: center;
+    align-content: center;
+    font-family:'Helvetica';
+    font-weight:bold;
+    background-color: var(--whiteThatAppearsEverywhere);
+    border-color:var(--bodyBG);
+    margin-bottom: 10px;
+    color:var(--darkest);
+    z-index:2;
+}
+
+.lifeContainer{
+    display:flex;
+    flex-direction:row;
+    flex-wrap:nowrap;
+    position:absolute;
+    gap:10px;
+    bottom: 7%;
+    right:25%;
+}
+
+.life{
+    width:10px;
+    height:10px;
+    background-color:var(--whiteThatAppearsEverywhere);
+    border-style: solid;
+    border-color:var(--whiteThatAppearsEverywhere);
+    border-width:1px;
+    border-radius:50%;
+    transition: 0.2s ease-in-out;
+}
+
+.lostLife{
+    background: none !important;
+}
+
+#scoreCount{
+    font-family:'Helvetica';
+    font-weight:1000;
+    font-size:7vh;
+    position:absolute;
+    left:0px;
+    bottom:3%;
+    color:var(--whiteThatAppearsEverywhere);
+    transition: 0.25s ease-out;
+}
+
+#streakCount{
+    position: absolute;
+    left:15%;
+    bottom: 3%;
+    font-family: 'Helvetica';
+    font-weight: bold;
+    color:var(--whiteThatAppearsEverywhere);
+    font-size: min(3.8vw, 30px);
+    transition: 0.25s ease-in-out;
+}
+
+.typeButtonsContainer{
+    display:flex;
+    width:25vw;
+    max-width:250px;
+    height:5vh;
+    flex-direction: row;
+    gap: 20px;
+    flex-wrap:nowrap;
+    margin-top:13px;
+    background: var(--typeBtnContBG);
     border-radius: 8px;
+    justify-content: center;
+    align-items: center;
+    align-content: space-between;
+    z-index: 4;
+}
+
+.typeButtons{
+    background:var(--typeBtnsBG);
+    border-radius:4px;
+    transition: 0.5s ease-in-out;
+    border:none;
+    font-size: min(2.5vw, 20px);
+    
+    height:fit-content;
+    width:fit-content;
+}
+.typeButtons:hover{
+    cursor: pointer;
+}
+
+.typeButtonDeco{
+    background:var(--bodyBG);
+    color:var(--whiteThatAppearsEverywhere);
+}
+.typeButtonDeco:hover{
+    cursor:pointer;
+}
+.extra{
+    position: absolute;
+    left:0%;
+    display:none;
+}
+
+.noteContainer{
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    align-content:center;
+    flex-wrap: nowrap;
+    z-index:2;
+}
+.plusStreak{
+    color: green !important;
+    scale: 140%;
+}
+
+.minusStreak{
+    color:red !important;
+    scale:60%;
 }
 
 .corr{
     background-color: green !important;
+    scale: 120%;
 }
 .incorr{
     background-color: red !important;
+    scale:80%;
 }
-
+.MusicButton:disabled{
+    background-color:var(--brightest);
+}
 .corr:hover{
     filter:none !important;
 }
 
 .incorr:hover{
     filter:none !important;
+}
+
+@media screen and (max-height:800px){
+    .typeButtonsContainer{
+        scale:85%;
+    }
+    .noteContainer{
+        margin-bottom:-5px;
+    }
+    @media screen and (min-width:750px){
+        .typeButtonsContainer{
+            scale:100%;
+        }
+        .noteContainer{
+            margin-bottom:8px;
+        }
+    }
+}
+
+
+@media screen and (min-width:750px){
+    #streakCount{
+        bottom:1.5% !important;
+    }
+}
+
+@media screen and (min-width:1000px){
+    .lifeContainer{
+        right:30%;
+    }
 }
